modify the CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ project(lab2_2021)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
+  message_generation ## here
 )
 
 ## System dependencies are found with CMake's conventions
