--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>lab2_2021</name>
+  <name>rospackage_example</name>
   <version>0.0.0</version>
-  <description>The lab2_2021 package</description>
+  <description>The rospackage_example package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
